CWrapper/VariantUtils/VariantUtils.h

#pragma once

#include "../Runtime/Runtime.h"

#include <stdint.h>

#if defined(_WIN32)
#define LUNA_VARIANT_UTILS_C_API __declspec(dllexport)
#else
#define LUNA_VARIANT_UTILS_C_API __attribute__((visibility("default")))
#endif

#ifdef __cplusplus
extern "C" {
#endif

typedef struct LunaVariantUtilsVariantHandle
{
    void* variant;
} LunaVariantUtilsVariantHandle;

LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_init_module(void);
LUNA_VARIANT_UTILS_C_API void luna_variant_utils_free_string(const char* text);
LUNA_VARIANT_UTILS_C_API void luna_variant_utils_free_buffer(void* data);

LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create(uint8_t type);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_i64(int64_t value);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_u64(uint64_t value);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_f64(double value);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_string(const char* value);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_boolean(int32_t value);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_create_blob(const void* data, uint64_t size, uint64_t alignment);
LUNA_VARIANT_UTILS_C_API void luna_variant_utils_variant_destroy(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_clone(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API int32_t luna_variant_utils_variant_equals(LunaVariantUtilsVariantHandle lhs, LunaVariantUtilsVariantHandle rhs);
LUNA_VARIANT_UTILS_C_API uint8_t luna_variant_utils_variant_get_type(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API uint8_t luna_variant_utils_variant_get_number_type(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API int32_t luna_variant_utils_variant_valid(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API uint64_t luna_variant_utils_variant_get_size(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API int32_t luna_variant_utils_variant_contains(LunaVariantUtilsVariantHandle variant, const char* key);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_get_array_item(LunaVariantUtilsVariantHandle variant, uint64_t index);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_variant_get_object_item(LunaVariantUtilsVariantHandle variant, const char* key);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_get_object_key(LunaVariantUtilsVariantHandle variant, uint64_t index, const char** out_key);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_set_array_item(LunaVariantUtilsVariantHandle variant, uint64_t index, LunaVariantUtilsVariantHandle value);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_insert_array_item(LunaVariantUtilsVariantHandle variant, uint64_t index, LunaVariantUtilsVariantHandle value);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_push_back(LunaVariantUtilsVariantHandle variant, LunaVariantUtilsVariantHandle value);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_erase_array_item(LunaVariantUtilsVariantHandle variant, uint64_t index);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_pop_back(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_set_object_item(LunaVariantUtilsVariantHandle variant, const char* key, LunaVariantUtilsVariantHandle value);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_erase_object_item(LunaVariantUtilsVariantHandle variant, const char* key);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_get_string(LunaVariantUtilsVariantHandle variant, const char** out_string);
LUNA_VARIANT_UTILS_C_API int64_t luna_variant_utils_variant_get_i64(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API uint64_t luna_variant_utils_variant_get_u64(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API double luna_variant_utils_variant_get_f64(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API int32_t luna_variant_utils_variant_get_boolean(LunaVariantUtilsVariantHandle variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_variant_get_blob(LunaVariantUtilsVariantHandle variant, void** out_data, uint64_t* out_size, uint64_t* out_alignment);

LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_read_json(const char* src, uint64_t src_size, LunaVariantUtilsVariantHandle* out_variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_read_json_stream(luna_handle_t stream_object, LunaVariantUtilsVariantHandle* out_variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_write_json(LunaVariantUtilsVariantHandle variant, int32_t indent, const char** out_string);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_write_json_stream(luna_handle_t stream_object, LunaVariantUtilsVariantHandle variant, int32_t indent);

LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_new_xml_element(const char* name);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_get_xml_name(LunaVariantUtilsVariantHandle xml_element, const char** out_name);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_set_xml_name(LunaVariantUtilsVariantHandle xml_element, const char* name);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_get_xml_attributes(LunaVariantUtilsVariantHandle xml_element);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_set_xml_attributes(LunaVariantUtilsVariantHandle xml_element, LunaVariantUtilsVariantHandle attributes);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_get_xml_content(LunaVariantUtilsVariantHandle xml_element);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_set_xml_content(LunaVariantUtilsVariantHandle xml_element, LunaVariantUtilsVariantHandle content);
LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_find_first_xml_child_element(LunaVariantUtilsVariantHandle xml_element, const char* name, uint64_t start_index, uint64_t* out_index);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_read_xml(const void* src, uint64_t src_size, LunaVariantUtilsVariantHandle* out_variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_read_xml_stream(luna_handle_t stream_object, LunaVariantUtilsVariantHandle* out_variant);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_write_xml(LunaVariantUtilsVariantHandle variant, int32_t indent, const char** out_string);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_write_xml_stream(luna_handle_t stream_object, LunaVariantUtilsVariantHandle variant, int32_t indent);

LUNA_VARIANT_UTILS_C_API LunaVariantUtilsVariantHandle luna_variant_utils_diff(LunaVariantUtilsVariantHandle before, LunaVariantUtilsVariantHandle after);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_patch(LunaVariantUtilsVariantHandle before, LunaVariantUtilsVariantHandle delta);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_revert(LunaVariantUtilsVariantHandle after, LunaVariantUtilsVariantHandle delta);
LUNA_VARIANT_UTILS_C_API luna_errcode_t luna_variant_utils_add_diff_prefix(LunaVariantUtilsVariantHandle delta, const LunaVariantUtilsVariantHandle* prefix_nodes, uint64_t count);

#ifdef __cplusplus
}
#endif