Managed/VariantUtils/Internal/Generated/VariantUtilsNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.VariantUtils.Internal;

internal static partial class VariantUtilsNativeGenerated
{
    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_free_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeString(IntPtr text);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_free_buffer", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeBuffer(IntPtr data);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreate(byte type);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_i64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateI64(long value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_u64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateU64(ulong value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_f64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateF64(double value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateString([MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_boolean", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateBoolean(int value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_create_blob", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantCreateBlob(IntPtr data, ulong size, ulong alignment);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_destroy", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void VariantDestroy(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_clone", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantClone(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_equals", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int VariantEquals(NativeVariantHandle lhs, NativeVariantHandle rhs);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte VariantGetType(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_number_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte VariantGetNumberType(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_valid", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int VariantValid(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong VariantGetSize(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_contains", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int VariantContains(NativeVariantHandle variant, [MarshalAs(UnmanagedType.LPUTF8Str)] string key);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_array_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantGetArrayItem(NativeVariantHandle variant, ulong index);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_object_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle VariantGetObjectItem(NativeVariantHandle variant, [MarshalAs(UnmanagedType.LPUTF8Str)] string key);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_object_key", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantGetObjectKey(NativeVariantHandle variant, ulong index, out IntPtr outKey);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_set_array_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantSetArrayItem(NativeVariantHandle variant, ulong index, NativeVariantHandle value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_insert_array_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantInsertArrayItem(NativeVariantHandle variant, ulong index, NativeVariantHandle value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_push_back", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantPushBack(NativeVariantHandle variant, NativeVariantHandle value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_erase_array_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantEraseArrayItem(NativeVariantHandle variant, ulong index);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_pop_back", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantPopBack(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_set_object_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantSetObjectItem(NativeVariantHandle variant, [MarshalAs(UnmanagedType.LPUTF8Str)] string key, NativeVariantHandle value);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_erase_object_item", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantEraseObjectItem(NativeVariantHandle variant, [MarshalAs(UnmanagedType.LPUTF8Str)] string key);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_string", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantGetString(NativeVariantHandle variant, out IntPtr outString);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_i64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long VariantGetI64(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_u64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong VariantGetU64(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_f64", CallingConvention = CallingConvention.Cdecl)]
    internal static extern double VariantGetF64(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_boolean", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int VariantGetBoolean(NativeVariantHandle variant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_variant_get_blob", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr VariantGetBlob(NativeVariantHandle variant, out IntPtr outData, out ulong outSize, out ulong outAlignment);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_read_json", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadJson([MarshalAs(UnmanagedType.LPUTF8Str)] string src, ulong srcSize, out NativeVariantHandle outVariant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_read_json_stream", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadJsonStream(IntPtr streamObject, out NativeVariantHandle outVariant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_write_json", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteJson(NativeVariantHandle variant, int indent, out IntPtr outString);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_write_json_stream", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteJsonStream(IntPtr streamObject, NativeVariantHandle variant, int indent);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_new_xml_element", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle NewXmlElement([MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_get_xml_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetXmlName(NativeVariantHandle xmlElement, out IntPtr outName);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_set_xml_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetXmlName(NativeVariantHandle xmlElement, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_get_xml_attributes", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle GetXmlAttributes(NativeVariantHandle xmlElement);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_set_xml_attributes", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetXmlAttributes(NativeVariantHandle xmlElement, NativeVariantHandle attributes);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_get_xml_content", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle GetXmlContent(NativeVariantHandle xmlElement);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_set_xml_content", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetXmlContent(NativeVariantHandle xmlElement, NativeVariantHandle content);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_find_first_xml_child_element", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle FindFirstXmlChildElement(NativeVariantHandle xmlElement, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, ulong startIndex, out ulong outIndex);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_read_xml", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadXml(IntPtr src, ulong srcSize, out NativeVariantHandle outVariant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_read_xml_stream", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ReadXmlStream(IntPtr streamObject, out NativeVariantHandle outVariant);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_write_xml", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteXml(NativeVariantHandle variant, int indent, out IntPtr outString);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_write_xml_stream", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr WriteXmlStream(IntPtr streamObject, NativeVariantHandle variant, int indent);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_diff", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeVariantHandle Diff(NativeVariantHandle before, NativeVariantHandle after);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_patch", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr Patch(NativeVariantHandle before, NativeVariantHandle delta);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_revert", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr Revert(NativeVariantHandle after, NativeVariantHandle delta);

    [DllImport("LunaVariantUtilsC", EntryPoint = "luna_variant_utils_add_diff_prefix", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr AddDiffPrefix(NativeVariantHandle delta, IntPtr prefixNodes, ulong count);

}
